syntax = "proto3";

import "google/protobuf/empty.proto";

message HealthCheckResponse {
  string engine_status = 0;
  string relayer_status = 1;
}

message OpenChannelRequest {
  optional int64 funding_amount = 0;
}

message OpenChannelResponse {
  string success = 0;
}

service AdminService {
  rpc HealthCheck (google.protobuf.Empty) returns (HealthCheckResponse);
  rpc OpenChannel (OpenChannelRequest) returns (OpenChannelResponse);
}
